--- a/app/src/main/res/drawable/horizontal_divider.xml
+++ b/app/src/main/res/drawable/horizontal_divider.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="15dp"
-    android:width="200dp"
-    android:viewportHeight="10"
-    android:viewportWidth="20">
-<path android:strokeColor="@color/invertedLiftedBackgrounds"
-    android:strokeWidth="2"
-    android:strokeLineCap="square"
-    android:pathData="M1,5 L19,5"
-    />
-
-</vector>
+<shape android:shape="rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<corners android:radius="15dp"/>
+    <solid android:color="@color/gray_light"/>
+    <size android:height="5dp"/>
+</shape>
