--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -85,7 +85,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.75" />
+                    app:layout_constraintVertical_bias="0.7" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/expanded_play_pause"
@@ -96,7 +96,7 @@
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.74">
+                    app:layout_constraintVertical_bias="0.88">
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -138,6 +138,32 @@
                     app:layout_constraintHorizontal_bias="0.84"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/expanded_play_pause" />
+
+                <TextView
+                    android:id="@+id/currentpos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:gravity="start"
+                    android:text="0:00"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toTopOf="@+id/expanded_checkbox"
+                    app:layout_constraintStart_toStartOf="@+id/expanded_seekbar"
+                    app:layout_constraintTop_toBottomOf="@+id/expanded_seekbar"
+                    app:layout_constraintVertical_bias="0.0" />
+
+                <TextView
+                    android:id="@+id/totallength"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:gravity="end"
+                    android:text="0:00"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toTopOf="@+id/expanded_checkbox"
+                    app:layout_constraintEnd_toEndOf="@+id/expanded_seekbar"
+                    app:layout_constraintTop_toBottomOf="@+id/expanded_seekbar"
+                    app:layout_constraintVertical_bias="0.0" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
